<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AdzanActivity"
    android:background="@drawable/splash_background"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/colorTertiary"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="32dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/back"
            android:backgroundTint="@color/colorLight"
            android:contentDescription="@string/back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="48dp"
            android:gravity="center"
            android:textSize="14sp"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/colorLight"
            android:text="@string/adzan_activity"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/mosque_sunset"
                    android:contentDescription="@string/waktuTanggal"
                    android:scaleType="centerCrop"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#99000000"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/timeTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="42sp"
                        android:fontFamily="@font/poppins_bold"
                        android:visibility="gone"
                        android:text="@string/waktuSekarang"/>

                    <TextView
                        android:id="@+id/dateTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ffffff"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"
                        android:visibility="gone"
                        android:text="@string/tanggalSekarang"/>

                </LinearLayout>

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/colorSecondary"
        android:orientation="vertical"
        android:paddingVertical="8dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintTop_toBottomOf="@id/dateTime">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/subuh"/>

            <TextView
                android:id="@+id/subuhTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:visibility="gone"
                android:text="@string/waktuSubuh"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/dzuhur"/>

            <TextView
                android:id="@+id/dzuhurTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:visibility="gone"
                android:text="@string/waktDzuhur"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/ashar"/>

            <TextView
                android:id="@+id/asharTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:visibility="gone"
                android:text="@string/waktuAshar"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/maghrib"/>

            <TextView
                android:id="@+id/maghribTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:visibility="gone"
                android:text="@string/waktuMaghrib"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/isya"/>

            <TextView
                android:id="@+id/isyaTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/colorLight"
                android:textSize="16sp"
                android:textAlignment="viewEnd"
                android:visibility="gone"
                android:text="@string/waktuIsya"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
