<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/splash_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTertiary"
                android:orientation="vertical"
                android:padding="32dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="12dp"
                android:gravity="end"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/salam"
                    android:textColor="@color/colorLight"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/greeting"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="24dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnGoToKiblat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="12dp">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/colorSecondary"
                                android:src="@drawable/kabah_icon"
                                android:contentDescription="@string/kiblat_activity"
                                android:padding="12dp"/>

                            <TextView
                                android:layout_width="72dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginVertical="8dp"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:text="@string/kiblat_activity" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnGoToAdzan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="12dp">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/colorSecondary"
                                android:src="@drawable/time_icon"
                                android:contentDescription="@string/adzan_activity"
                                android:padding="12dp"/>

                            <TextView
                                android:layout_width="72dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginVertical="8dp"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:text="@string/adzan_activity" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnGoToMasjid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="#00FFFFFF"
                        app:cardElevation="0dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="12dp">

                            <ImageView
                                android:layout_width="64dp"
                                android:layout_height="64dp"
                                android:background="@drawable/rounded"
                                android:backgroundTint="@color/colorSecondary"
                                android:src="@drawable/mosque_icon"
                                android:contentDescription="@string/masjid_activity"
                                android:padding="12dp"/>

                            <TextView
                                android:layout_width="72dp"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:layout_marginVertical="8dp"
                                android:fontFamily="@font/roboto_regular"
                                android:textColor="@android:color/black"
                                android:textSize="12sp"
                                android:text="@string/masjid_activity" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
